--- a/debian.jessie/changelog
+++ b/debian.jessie/changelog
@@ -1,3 +1,9 @@
+node-mongo-express (0.39.1-manala1~jessie1) unstable; urgency=low
+
+  * Upstream update
+
+ -- Manala <contact@manala.io>  Wed, 05 Apr 2017 07:35:11 +0000
+
 node-mongo-express (0.38.0-manala1~jessie1) unstable; urgency=low
 
   * Upstream update
