--- a/debian.jessie/changelog
+++ b/debian.jessie/changelog
@@ -1,3 +1,9 @@
+node-mongo-express (0.40.0-manala1~jessie1) unstable; urgency=low
+
+  * Upstream update
+
+ -- Manala <contact@manala.io>  Fri, 09 Jun 2017 13:54:25 +0000
+
 node-mongo-express (0.39.1-manala1~jessie1) unstable; urgency=low
 
   * Upstream update
