--- a/debian/wheezy/changelog
+++ b/debian/wheezy/changelog
@@ -1,3 +1,9 @@
+mongo-express (0.40.0-manala1~wheezy1) unstable; urgency=low
+
+  * Rename to "mongo-express"
+
+ -- Manala <contact@manala.io>  Thu, 07 Sep 2017 07:27:54 +0000
+
 node-mongo-express (0.40.0-manala1~wheezy1) unstable; urgency=low
 
   * Upstream update
