--- a/debian/wheezy/changelog
+++ b/debian/wheezy/changelog
@@ -1,3 +1,10 @@
+mongo-express (0.42.3-manala1~wheezy1) unstable; urgency=low
+
+  * Upstream update
+  * Fix descriptions
+
+ -- Manala <contact@manala.io>  Thu, 12 Oct 2017 07:27:33 +0000
+
 mongo-express (0.40.0-manala1~wheezy1) unstable; urgency=low
 
   * Rename to "mongo-express"
