--- a/debian/stretch/changelog
+++ b/debian/stretch/changelog
@@ -1,3 +1,9 @@
+mongo-express (0.44.0-manala1~stretch1) unstable; urgency=low
+
+  * Upstream update
+
+ -- Manala <contact@manala.io>  Tue, 02 Jan 2018 10:35:42 +0000
+
 mongo-express (0.43.1-manala1~stretch1) unstable; urgency=low
 
   * Upstream update
