--- a/debian/wheezy/changelog
+++ b/debian/wheezy/changelog
@@ -1,3 +1,9 @@
+mongo-express (0.49.0-manala1~wheezy1) unstable; urgency=low
+
+  * Upstream update
+
+ -- Manala <contact@manala.io>  Thu, 08 Nov 2018 14:41:36 +0000
+
 mongo-express (0.44.0-manala1~wheezy1) unstable; urgency=low
 
   * Upstream update
